@@ -1,3 +1,8 @@
+2005-11-02  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add mapping for save icon
+	Add links for the stock undo/redo icons in GNOME and GTK+
+
 2005-11-01  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Fix typo for edit-undo
